# MongoDB-Voyage-Celebrity-Match-Demo

./: .gitignore  .replit  README.md  clean_names.py  collect_images.py  create_vector_store.py  crop_face.py  downloaded_file.txt  load_data.py  main.py  names.csv  names.txt  pyproject.toml  replit.nix  requirements.txt  s3test.py  test_s3.py  voyage_multimodal.py
attached_assets/: Pasted-Traceback-most-recent-call-last-File-home-runner-workspace-load-data-py-line-89-in-module-1744171411944.txt  Pasted-pip-install-face-recognition-Collecting-face-recognition-Downloading-face-recognition-1-3-0-py2-py-1743717943398.txt
templates/: index.html
