[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "bing-image-downloader>=1.1.2",
    "boto3>=1.37.25",
    "google-images-download>=2.8.0",
    "replit-object-storage>=1.0.2",
    "requests>=2.32.3",
]
